# BIASJAABA

./: CMakeLists.txt  README.md  readme.rst  version.txt
arduino/: turn4led_onandoff.ino
arduino/turn4led_onandoff/: turn4led_onandoff.ino
cmake/Modules/: FindNIDAQmx.cmake  FindSpinnaker.cmake
scripts/: run_bias.sh
src/backend/base/: CMakeLists.txt  camera_device.cpp  camera_device.hpp
src/backend/dc1394/: CMakeLists.txt
src/backend/fc2/: camera_device_fc2.cpp  camera_device_fc2.hpp  utils_fc2.cpp
src/backend/spin/: CMakeLists.txt  base_node_spin.cpp  bool_node_spin.cpp  camera_device_spin.cpp  camera_device_spin.hpp  command_node_spin.cpp  command_node_spin.hpp  entry_node_spin.cpp  entry_node_spin.hpp  enum_node_spin.cpp  enum_node_spin.hpp  float_node_spin.cpp  integer_node_spin.cpp  integer_node_spin.hpp  node_map_spin.cpp  node_map_spin.hpp  node_map_utils.cpp  number_node_spin.hpp  string_node_spin.cpp  utils_spin.cpp
src/backend/video/: CMakeLists.txt  video_utils.cpp  video_utils.hpp
src/demo/beh_class/: CMakeLists.txt  HOGHOF.cpp  HOGHOF.hpp  beh_class.cpp  beh_class.hpp  beh_class_main.cpp  image_fcns.cpp  image_fcns.h  logger.h  spin_utils.cpp  spin_utils.hpp  utils.cpp  utils.hpp
src/demo/beh_class/json_files/: HOFparam.json
src/demo/beh_class/scripts/: Cropfrt_param_json.py  Cropparam_json.py  Cropsde_param_json.py  HOFparam_json.py  HOGparam_json.py
src/demo/fly_sorter/: CMakeLists.txt  bgr_to_luv_converter.cpp  fast_binary_predictor.cpp  fly_segmenter.cpp  fly_sorter_window.cpp  hog_position_fitter.cpp  hog_position_fitter.hpp  hog_sorter.cpp  hungarian.cpp  identity_tracker.cpp  image_grabber.cpp  parameters.cpp
src/demo/generatehoghof/: CMakeLists.txt  generate_hoghof.cpp
src/demo/opencv_test/: CMakeLists.txt  opencv_videowrite_test.cpp
src/facade/: CMakeLists.txt  basic_types.hpp  camera.cpp  camera.hpp  camera_finder.cpp  camera_finder.hpp  format7.hpp  guid.cpp  guid.hpp  property.hpp  utils.cpp  utils.hpp
src/gui/: CMakeLists.txt  affinity.cpp  background_data_ufmf.cpp  background_data_ufmf.hpp  background_histogram_ufmf.hpp  camera_window.cpp  camera_window.hpp  camera_window.ui  compressed_frame_jpg.cpp  compressed_frame_jpg.hpp  compressed_frame_ufmf.cpp  compressed_frame_ufmf.hpp  compressor_jpg.cpp  compressor_ufmf.cpp  ext_ctl_http_server.cpp  ext_ctl_http_server.hpp  fps_estimator.cpp  image_dispatcher.cpp  image_dispatcher.hpp  image_grabber.cpp  image_grabber.hpp  image_logger.cpp  image_logger.hpp  logging_settings_dialog.cpp  main.cpp  parser.cpp  parser.hpp  plugin_handler.cpp  plugin_handler.hpp  property_dialog.cpp  video_writer.cpp  video_writer.hpp  video_writer_avi.cpp  video_writer_avi.hpp  video_writer_jpg.cpp  video_writer_jpg.hpp  video_writer_params.cpp  video_writer_ufmf.cpp
src/plugin/base/: CMakeLists.txt  bias_plugin.cpp  bias_plugin.hpp
src/plugin/flytrack/: CMakeLists.txt  flytrack_config.cpp  flytrack_config.hpp  flytrack_plugin.cpp  flytrack_plugin.hpp  flytrack_plugin.ui  pfly_environment.yml  project_fly.py  readRealTimeTrackFile.m
src/plugin/grab_detector/: CMakeLists.txt  grab_detector_plugin.cpp  grab_detector_plugin.hpp  pulse_device.cpp  pulse_device.hpp
src/plugin/jaaba_plugin/: CMakeLists.txt  HOGHOF.cpp  HOGHOF.hpp  beh_class.cpp  beh_class.hpp  frame_data.hpp  jaaba_plugin.cpp  jaaba_plugin.hpp  jaaba_plugin.ui  jaaba_utils.cpp  jaaba_utils.hpp  logger.h  process_scores.cpp  process_scores.hpp  shape_data.hpp  vis_plots.cpp  vis_plots.hpp
src/plugin/jaaba_plugin/json_files/: Cropfrt_param.json  Cropsde_param.json  HOFparam.json  HOGparam.json
src/plugin/signal_slot_demo/: CMakeLists.txt  signal_slot_demo_plugin.cpp  signal_slot_demo_plugin.hpp
src/plugin/stampede/: CMakeLists.txt  stampede_plugin.cpp  stampede_plugin.hpp  stampede_plugin_config.cpp
src/test/: CMakeLists.txt  test_fc2.cpp  test_spinnaker.cpp  test_video.cpp
src/utility/: CMakeLists.txt  NIDAQUtils.cpp  NIDAQUtils.hpp  basic_http_server.cpp  basic_image_proc.cpp  blob_data.hpp  blob_finder.cpp  json_utils.cpp  lockable.hpp  mat_to_qimage.cpp  stamped_image.hpp  test_config.cpp  test_config.hpp  timerClass.cpp  timerClass.hpp  win_time.cpp  win_time.h  win_time.hpp
